ipc/ipdl/test/ipdl/error/PIntrNested.ipdl
//error: intr message `Msg' cannot specify [Nested]

[ChildProc=any]
intr protocol PIntrNested {
child:
  [Nested=inside_sync, LegacyIntr] intr Msg();
};
